fixed buildmenu queue text updating

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 ﻿10.24 -> 1.00
 
  • Movedefs/slopes equalized to allow for less steep, more beautifull map slopes
+ • Enabled ground deformation
 
 
 10.23 -> 10.24
