--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ﻿10.24 -> 1.00
 
- • T1 Metal Extractors cost 3 Energy to operate, and also have slightly reduced buildprice
+ • T1 metal extractors use 3 Energy to operate, also slightly reduced buildprice
  • Ground scout vehicles/kbot: 10% more LoS
  • Enabled ground deformation
  • Wreckage/heaps have the same HP as regular unit HP (~33% increase)
