--- a/changelog.txt
+++ b/changelog.txt
@@ -8,7 +8,7 @@ General
 
 Air/AA: Goal: fewer units, longer lasting
  • Air units: +30%: cost, health, damage, buildpower. (fighters/liche/krow exluded)
- • Fighters cost: +30%, health: +60%, damage: -25%, speed: +15%, manouverability: +15%
+ • Fighters cost: +30%, health: +60%, damage: -25%, range: -35%, speed: +15%, manouverability: +15%
  • AA range increased 6%. (mercury/screamer excluded)
  • Removed air collisions for bombers
 
