New Armkam | With deadly machineguns
Banshee: changed weapon to machine gun with more accuracy, 5 burst (instead of 3) but little less average dps (-10%). Tested in all most common situations for same-ish balance. It's better against moving units now, but a little worse against raiding bases.

--- a/changelog.txt
+++ b/changelog.txt
@@ -17,6 +17,7 @@ Units
  • Juggernaut: main weapon does 4x old damage/reloadtime
  • added experimental ARM T3 unit: Giant Invader, crawling nuclear bomb
  • EMP launcher: reduced range 10%
+ • Banshee: changed weapon to machine gun with more accuracy, 5 burst (instead of 3) but little less average dps (-10%)
 
 Renamed units:
  • Pack0 -> Ferret
