--- a/changelog.txt
+++ b/changelog.txt
@@ -15,9 +15,9 @@ Units
  • Claw/Zeus: lightning chains again (up to 2 neighbouring units *0.5dmg for zeus, *0.325 for claw)
  • Karganeth: Removed aa missile
  • Juggernaut: main weapon does 4x old damage/reloadtime
- • added experimental ARM T3 unit: Giant Invader, crawling nuclear bomb
  • EMP launcher: reduced range 10%
  • Banshee: changed weapon to machine gun with more accuracy, 5 burst (instead of 3) but little less average dps (-10%)
+ • Air Fighters can no longer attack ground
 
 Renamed units:
  • Pack0 -> Ferret
