--- a/changelog.txt
+++ b/changelog.txt
@@ -5,22 +5,25 @@ General
  • Wreckage/heaps have the same HP as regular unit HP (~33% increase)
  • Increased maxslope for all units 50% (the slope it allows to be build on)
  • Units gain xp (ranks) faster, also relatively more health/firerate compared the the same old xp
- • Air collisions for bombers removed
 
 Units
  • T1 metal extractors use 3 Energy to operate, also slightly reduced buildprice
  • Ground scouts (vehicles/bot): 10% more LoS
  • T1 vehicle artillery has faster projectile and does 2x more damage per shot, but also has 2x reloadtime.
  • Decreased cormaw damage 27%
+ • Arm Peewee damage reduced by 9%
+ • Core AK range reduced 240->225
  • Claw/Zeus: lightning chains again (up to 2 neighbouring units *0.5dmg for zeus, *0.325 for claw)
  • Juggernaut: main weapon does 4x old damage/reloadtime
  • EMP launcher: reduced range 10%
+
+Air
  • Banshee: changed weapon to machine gun with more accuracy, 5 burst (instead of 3) but little less average dps (-10%)
  • Air Fighters can no longer attack ground
  • T1 construction plane E cost -30%
- • LLT, HLLT, BEAMER, RL, RAD now transportable with T2/Heavy Transporters 
- • Arm Peewee damage reduced by 9%
- • Core AK range reduced 240->225
+ • LLT, HLLT, BEAMER, RL, RAD now transportable with T2/Heavy Transporters
+
+Sea
  • Arm and Cor frigate damage and speed increased
  • Cor Battleship and Black Hydra laser dps increased by 15%, and minor improvements to their speed/health/cost
  • All sub damage -30%
@@ -34,4 +37,4 @@ Renamed units:
 10.23 -> 10.24
 24/02/2019
 
-Balanced Annihilation 10.24, the game this was based on.
+Balanced Annihilation 10.24, the game this has been based on.
