--- a/language/en/units.json
+++ b/language/en/units.json
@@ -648,6 +648,7 @@
 			"legadvsol": "Advanced Solar Collector",
 			"legassistdrone": "Assist Drone",
 			"legassistdrone_land": "Assist Vehicle",
+			"legatrans": "Aeolus",
 			"legavp": "Advanced Vehicle Plant",
 			"legbal": "Ballista",
 			"legbar": "Barrage",
@@ -1429,6 +1430,7 @@
 			"legadvsol": "Produces 100 Energy",
 			"legassistdrone": "Portable Buildpower",
 			"legassistdrone_land": "Portable Buildpower",
+			"legatrans": "Air Transport",
 			"legavp": "Produces Tech 2 Vehicles",
 			"legbal": "Medium Rocket Bot",
 			"legbar": "Napalm Artillery",
