legion eviscerator added

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -639,6 +639,7 @@
 			"cor_hat_hornet": "Hornet's Tricorn",
 			"cor_hat_ptaq": "PtaQ's Hat",
 			"leegmech": "Praetorian",
+			"legacluster": "Eviscerator",
 			"legalab": "Legion Advanced Bot Lab",
 			"legah": "Alpheus",
 			"legap": "Legion Drone Plant",
@@ -1428,6 +1429,7 @@
 			"cor_hat_hornet": "A weathered yet dapper tricorn",
 			"cor_hat_ptaq": "The finest bonnet in all of Gnomedom",
 			"leegmech": "Armored Assault Mech",
+			"legacluster": "Pop-up Cluster Plasma Artillery",
 			"legalab": "Advanced Bot Lab",
 			"legah": "Anti-Air Hovercraft",
 			"legap": "Drone Plant",
